<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, PadActivity!</string>
    <string name="app_name">Navigation panel</string>
    <string name="twelve_hour_time_format">h:mm a</string>
    <string name="twenty_four_hour_time_format">h:mm</string>
    <string name="accessibility_battery_level">Battery%d percent.</string>
    <string name="status_bar_settings_battery_meter_format">%d%%</string>
    <string name="navi">Navi</string>
    <string name="fmt">FMT</string>
    <string name="media">Media</string>
    <string name="recorder">Recorder</string>
    <string name="alarm">Alarm</string>
    <string name="game">Game</string>
    <string name="setting">Setting</string>
    <string name="gps_info">GPS Info</string>
    <string name="shutdown">ShutDown</string>
    <string name="sleep">Sleep</string>
    <string name="cancel">Cancel</string>
    <string name="select">Please Select</string>
    <string name="title_activity_navi">NaviActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="calculator">Calculator</string>
    <string name="toolbox">Toolbox</string>
    <string name="blutooth">Phone</string>
    <string name="radio">Radio</string>
    <string name="interconnect">Car Link</string>
    <string name="my_chcvy">MyChevy</string>
    <string name="voice">Voice</string>
    <string name="all_the_way">Listening</string>
    <string name="friends">Air friends</string>
    <string name="car_butler">Car Butler</string>
    <string name="car_assist">Car Assist</string>
    <string name="aplication">App</string>
    <string name="music">Music</string>
    <string name="vedio">Vedio</string>
    <string name="image">Photo</string>
    <string name="bmusic">A2dp</string>
    <string name="auxin">Aux</string>
    <string name="agree">Agree</string>
    <string name="warn">Warn!!!</string>
    <string name="warn_detail1">For your safety,</string>
    <string name="warn_detail2">please do not operate the app while drving.</string>
    <string name="driving_record">Driving Record</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
</resources>
