<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@null" android:layout_width="320.0dip" android:layout_height="130.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:gravity="center" android:id="@id/title" android:layout_width="320.0dip" android:layout_height="49.0dip" />
    <LinearLayout android:background="#ff000055" android:layout_width="320.0dip" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:background="@null" android:layout_width="320.0dip" android:layout_height="80.0dip">
        <Button android:id="@id/shutdown" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/shutdown" android:layout_weight="1.0" />
        <Button android:id="@id/sleep" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/sleep" android:layout_weight="1.0" />
        <Button android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>