<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="1024.0px" android:layout_height="600.0px"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/page1Back" android:background="@drawable/background" android:layout_width="1024.0px" android:layout_height="600.0px" />
    <FrameLayout android:id="@id/main" android:layout_width="182.0px" android:layout_height="186.0px" android:layout_marginLeft="70.0px" android:layout_marginTop="107.0px">
        <Button android:textSize="24.0px" android:textColor="@drawable/btn_textcolor" android:id="@id/myChevy" android:background="@drawable/btn_chcvy" android:paddingTop="100.0px" android:nextFocusLeft="@id/carAssit" android:layout_width="182.0px" android:layout_height="186.0px" android:scaleType="matrix" android:text="@string/my_chcvy" android:onClick="onClick" />
    </FrameLayout>
    <FrameLayout android:layout_width="182.0px" android:layout_height="186.0px" android:layout_marginLeft="304.0px" android:layout_marginTop="107.0px">
        <Button android:textSize="24.0px" android:textColor="@drawable/btn_textcolor" android:id="@id/listening" android:background="@drawable/btn_listener" android:paddingTop="100.0px" android:layout_width="182.0px" android:layout_height="186.0px" android:scaleType="matrix" android:text="@string/all_the_way" android:onClick="onClick" />
    </FrameLayout>
    <FrameLayout android:layout_width="182.0px" android:layout_height="186.0px" android:layout_marginLeft="538.0px" android:layout_marginTop="107.0px">
        <Button android:textSize="24.0px" android:textColor="@drawable/btn_textcolor" android:id="@id/friends" android:background="@drawable/btn_friends" android:paddingTop="100.0px" android:nextFocusRight="@id/carAssit" android:layout_width="182.0px" android:layout_height="186.0px" android:scaleType="matrix" android:text="@string/friends" android:onClick="onClick" />
    </FrameLayout>
    <FrameLayout android:id="@id/main2" android:layout_width="182.0px" android:layout_height="186.0px" android:layout_marginLeft="773.0px" android:layout_marginTop="107.0px">
        <Button android:textSize="24.0px" android:textColor="@drawable/btn_textcolor" android:id="@id/carAssit" android:background="@drawable/btn_car_assit" android:paddingTop="100.0px" android:nextFocusLeft="@id/friends" android:nextFocusRight="@id/myChevy" android:layout_width="182.0px" android:layout_height="186.0px" android:scaleType="matrix" android:text="@string/car_assist" android:onClick="onClick" />
    </FrameLayout>
</FrameLayout>